// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Axis [common] example testing should match snapshot(s) for 2.bottom 1`] = `
<g
  className="lucid-Axis"
>
  <path
    className="lucid-Axis-domain"
    d="M0,6V0H360V6"
  />
  <g
    transform="translate(0, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      0
    </text>
  </g>
  <g
    transform="translate(72, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      20,000
    </text>
  </g>
  <g
    transform="translate(144, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      40,000
    </text>
  </g>
  <g
    transform="translate(216, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      60,000
    </text>
  </g>
  <g
    transform="translate(288, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      80,000
    </text>
  </g>
  <g
    transform="translate(360, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      100,000
    </text>
  </g>
</g>
`;

exports[`Axis [common] example testing should match snapshot(s) for 3.top 1`] = `
<g
  className="lucid-Axis"
>
  <path
    className="lucid-Axis-domain"
    d="M0,-6V0H360V-6"
  />
  <g
    transform="translate(0, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={-6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy="0em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={-9}
    >
      0
    </text>
  </g>
  <g
    transform="translate(72, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={-6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy="0em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={-9}
    >
      20,000
    </text>
  </g>
  <g
    transform="translate(144, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={-6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy="0em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={-9}
    >
      40,000
    </text>
  </g>
  <g
    transform="translate(216, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={-6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy="0em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={-9}
    >
      60,000
    </text>
  </g>
  <g
    transform="translate(288, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={-6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy="0em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={-9}
    >
      80,000
    </text>
  </g>
  <g
    transform="translate(360, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={-6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy="0em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={-9}
    >
      100,000
    </text>
  </g>
</g>
`;

exports[`Axis [common] example testing should match snapshot(s) for 4.left 1`] = `
<g
  className="lucid-Axis"
>
  <path
    className="lucid-Axis-domain"
    d="M-6,180H0V0H-6"
  />
  <g
    transform="translate(0, 180)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      x={-9}
      y={0}
    >
      0
    </text>
  </g>
  <g
    transform="translate(0, 162)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      x={-9}
      y={0}
    >
      10,000
    </text>
  </g>
  <g
    transform="translate(0, 144)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      x={-9}
      y={0}
    >
      20,000
    </text>
  </g>
  <g
    transform="translate(0, 126)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      x={-9}
      y={0}
    >
      30,000
    </text>
  </g>
  <g
    transform="translate(0, 108)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      x={-9}
      y={0}
    >
      40,000
    </text>
  </g>
  <g
    transform="translate(0, 90)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      x={-9}
      y={0}
    >
      50,000
    </text>
  </g>
  <g
    transform="translate(0, 72)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      x={-9}
      y={0}
    >
      60,000
    </text>
  </g>
  <g
    transform="translate(0, 54.000000000000014)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      x={-9}
      y={0}
    >
      70,000
    </text>
  </g>
  <g
    transform="translate(0, 36)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      x={-9}
      y={0}
    >
      80,000
    </text>
  </g>
  <g
    transform="translate(0, 18)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      x={-9}
      y={0}
    >
      90,000
    </text>
  </g>
  <g
    transform="translate(0, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={-6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "end",
        }
      }
      x={-9}
      y={0}
    >
      100,000
    </text>
  </g>
</g>
`;

exports[`Axis [common] example testing should match snapshot(s) for 5.right 1`] = `
<g
  className="lucid-Axis"
>
  <path
    className="lucid-Axis-domain"
    d="M6,180H0V0H6"
  />
  <g
    transform="translate(0, 180)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      x={9}
      y={0}
    >
      0
    </text>
  </g>
  <g
    transform="translate(0, 162)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      x={9}
      y={0}
    >
      10,000
    </text>
  </g>
  <g
    transform="translate(0, 144)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      x={9}
      y={0}
    >
      20,000
    </text>
  </g>
  <g
    transform="translate(0, 126)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      x={9}
      y={0}
    >
      30,000
    </text>
  </g>
  <g
    transform="translate(0, 108)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      x={9}
      y={0}
    >
      40,000
    </text>
  </g>
  <g
    transform="translate(0, 90)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      x={9}
      y={0}
    >
      50,000
    </text>
  </g>
  <g
    transform="translate(0, 72)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      x={9}
      y={0}
    >
      60,000
    </text>
  </g>
  <g
    transform="translate(0, 54.000000000000014)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      x={9}
      y={0}
    >
      70,000
    </text>
  </g>
  <g
    transform="translate(0, 36)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      x={9}
      y={0}
    >
      80,000
    </text>
  </g>
  <g
    transform="translate(0, 18)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      x={9}
      y={0}
    >
      90,000
    </text>
  </g>
  <g
    transform="translate(0, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={6}
      y2={0}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".32em"
      style={
        Object {
          "textAnchor": "start",
        }
      }
      x={9}
      y={0}
    >
      100,000
    </text>
  </g>
</g>
`;

exports[`Axis [common] example testing should match snapshot(s) for 6.time 1`] = `
<g
  className="lucid-Axis"
>
  <path
    className="lucid-Axis-domain"
    d="M0,6V0H360V6"
  />
  <g
    transform="translate(0.15748031496062992, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      2015
    </text>
  </g>
  <g
    transform="translate(42.65748031496063, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      April
    </text>
  </g>
  <g
    transform="translate(85.64960629921259, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      July
    </text>
  </g>
  <g
    transform="translate(129.11417322834646, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      October
    </text>
  </g>
  <g
    transform="translate(172.5984251968504, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      2016
    </text>
  </g>
  <g
    transform="translate(215.57086614173227, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      April
    </text>
  </g>
  <g
    transform="translate(258.56299212598424, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      July
    </text>
  </g>
  <g
    transform="translate(302.0275590551181, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      October
    </text>
  </g>
  <g
    transform="translate(345.51181102362204, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      2017
    </text>
  </g>
</g>
`;

exports[`Axis [common] example testing should match snapshot(s) for 6.time 2`] = `
<g
  className="lucid-Axis"
>
  <path
    className="lucid-Axis-domain"
    d="M0,6V0H360V6"
  />
  <g
    transform="translate(0.15748031496062992, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      2015
    </text>
  </g>
  <g
    transform="translate(85.64960629921259, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      July
    </text>
  </g>
  <g
    transform="translate(172.5984251968504, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      2016
    </text>
  </g>
  <g
    transform="translate(258.56299212598424, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      July
    </text>
  </g>
  <g
    transform="translate(345.51181102362204, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      2017
    </text>
  </g>
</g>
`;

exports[`Axis [common] example testing should match snapshot(s) for 6.time 3`] = `
<g
  className="lucid-Axis"
>
  <path
    className="lucid-Axis-domain"
    d="M0,6V0H360V6"
  />
  <g
    transform="translate(0.15748031496062992, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      2015
    </text>
  </g>
  <g
    transform="translate(172.5984251968504, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      2016
    </text>
  </g>
  <g
    transform="translate(345.51181102362204, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      2017
    </text>
  </g>
</g>
`;

exports[`Axis [common] example testing should match snapshot(s) for 7.ordinal 1`] = `
<g
  className="lucid-Axis"
>
  <path
    className="lucid-Axis-domain"
    d="M0,6V0H360V6"
  />
  <g
    transform="translate(45, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      a
    </text>
  </g>
  <g
    transform="translate(135, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      b
    </text>
  </g>
  <g
    transform="translate(225, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      c
    </text>
  </g>
  <g
    transform="translate(315, 0)"
  >
    <line
      className="lucid-Axis-tick"
      x2={0}
      y2={6}
    />
    <text
      className="lucid-Axis-tick-text"
      dy=".71em"
      style={
        Object {
          "textAnchor": "middle",
        }
      }
      x={0}
      y={9}
    >
      d
    </text>
  </g>
</g>
`;
